--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -3,3 +3,11 @@
 @import 'services';
 @import 'trusted';
 @import 'footer';
+@import 'product';
+@import 'feature-product';
+@import 'my-image';
+@import 'star';
+@import 'cart-amount-toggle';
+@import 'grid-view';
+@import 'list-view';
+@import 'sort';
