--- a/src/scss/_comman.scss
+++ b/src/scss/_comman.scss
@@ -1,7 +1,7 @@
 .button {
     color: white;
-    background-color: blue;
+    background-color: #0000ffbd;
     border: none;
-    padding: 5px 7px;
+    padding: 5px 10px;
     border-radius: 5px;
 }
